// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProjectsOther> matches snapshot with: Large width: ProjectsOtherLargelView.test.js.snap 1`] = `
<div
  className="projects-other"
>
  <div
    className="row"
  >
    <div
      className="other-info"
    >
      <h2
        className="title-text-other"
      >
        Other projects
      </h2>
      <div
        className="description-other"
      >
        <p>
          Check out other interesting tech projects developed by the community!
        </p>
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="projects-other-grid"
    >
      <ul
        className="MuiGridList-root"
        style={
          Object {
            "margin": -1.5,
          }
        }
      >
        <li
          className="MuiGridListTile-root project-grid-tile"
          id="other-project-other_project1"
          onClick={[Function]}
          style={
            Object {
              "height": "auto",
              "padding": 1.5,
              "width": "33.333333333333336%",
            }
          }
        >
          <div
            className="MuiGridListTile-tile"
          >
            <div>
              <img
                alt="other_project1"
                className="other-project-image"
                src="other_project1.jpg"
                style={
                  Object {
                    "backgroundColor": "#FFFFFF",
                  }
                }
              />
            </div>
            <div
              className="project-title"
            >
              <p>
                other_project1
              </p>
            </div>
          </div>
        </li>
        <li
          className="MuiGridListTile-root project-grid-tile"
          id="other-project-other_project2"
          onClick={[Function]}
          style={
            Object {
              "height": "auto",
              "padding": 1.5,
              "width": "33.333333333333336%",
            }
          }
        >
          <div
            className="MuiGridListTile-tile"
          >
            <div>
              <img
                alt="other_project2"
                className="other-project-image"
                src="other_project2.jpg"
                style={
                  Object {
                    "backgroundColor": "#FFFFFF",
                  }
                }
              />
            </div>
            <div
              className="project-title"
            >
              <p>
                other_project2
              </p>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<ProjectsOther> matches snapshot with: Small width: ProjectsOtherSmallView.test.js.snap 1`] = `
<div
  className="projects-other"
>
  <div
    className="other-info"
  >
    <h2
      className="title-text-other"
    >
      Other projects
    </h2>
    <div
      className="description-other"
    >
      <p>
        Check out other interesting tech projects developed by the community!
      </p>
    </div>
  </div>
  <div>
    <div
      className="other-projects-small container"
      id="other-project-small-other_project1"
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": "#FFFFFF",
        }
      }
    >
      <div
        className="row"
      >
        <div
          className="col-7"
        >
          <img
            alt="other_project1"
            className="other-project-image"
            src="other_project1.jpg"
          />
        </div>
        <div
          className="col-5"
        >
          <div
            className="project-title"
            style={
              Object {
                "color": "black",
              }
            }
          >
            <p>
              other_project1
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      className="other-projects-small container"
      id="other-project-small-other_project2"
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": "#FFFFFF",
        }
      }
    >
      <div
        className="row"
      >
        <div
          className="col-5"
        >
          <div
            className="project-title"
            style={
              Object {
                "color": "black",
              }
            }
          >
            <p>
              other_project2
            </p>
          </div>
        </div>
        <div
          className="col-7"
        >
          <img
            alt="other_project2"
            className="other-project-image"
            src="other_project2.jpg"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Matches snapshot with: Large width: ProjectsOtherSmallView.test.js.snap 1`] = `
<div
  className="projects-other"
>
  <div
    className="row"
  >
    <div
      className="other-info"
    >
      <h2
        className="title-text-other"
      >
        Other projects
      </h2>
      <div
        className="description-other"
      >
        <p>
          Check out other interesting tech projects developed by the community!
        </p>
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="projects-other-grid"
    >
      <ul
        className="MuiGridList-root"
        style={
          Object {
            "margin": -1.5,
          }
        }
      >
        <li
          className="MuiGridListTile-root project-grid-tile"
          id="other-project-other_project1"
          onClick={[Function]}
          style={
            Object {
              "height": "auto",
              "padding": 1.5,
              "width": "33.333333333333336%",
            }
          }
        >
          <div
            className="MuiGridListTile-tile"
          >
            <div>
              <img
                alt="other_project1"
                className="other-project-image"
                src="other_project1.jpg"
                style={
                  Object {
                    "backgroundColor": "#FFFFFF",
                  }
                }
              />
            </div>
            <div
              className="project-title"
            >
              <p>
                other_project1
              </p>
            </div>
          </div>
        </li>
        <li
          className="MuiGridListTile-root project-grid-tile"
          id="other-project-other_project2"
          onClick={[Function]}
          style={
            Object {
              "height": "auto",
              "padding": 1.5,
              "width": "33.333333333333336%",
            }
          }
        >
          <div
            className="MuiGridListTile-tile"
          >
            <div>
              <img
                alt="other_project2"
                className="other-project-image"
                src="other_project2.jpg"
                style={
                  Object {
                    "backgroundColor": "#FFFFFF",
                  }
                }
              />
            </div>
            <div
              className="project-title"
            >
              <p>
                other_project2
              </p>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Matches snapshot with: Small width: ProjectsOtherSmallView.test.js.snap 1`] = `
<div
  className="projects-other"
>
  <div
    className="other-info"
  >
    <h2
      className="title-text-other"
    >
      Other projects
    </h2>
    <div
      className="description-other"
    >
      <p>
        Check out other interesting tech projects developed by the community!
      </p>
    </div>
  </div>
  <div>
    <div
      className="other-projects-small container"
      id="other-project-small-other_project1"
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": "#FFFFFF",
        }
      }
    >
      <div
        className="row"
      >
        <div
          className="col-7"
        >
          <img
            alt="other_project1"
            className="other-project-image"
            src="other_project1.jpg"
          />
        </div>
        <div
          className="col-5"
        >
          <div
            className="project-title"
            style={
              Object {
                "color": "black",
              }
            }
          >
            <p>
              other_project1
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      className="other-projects-small container"
      id="other-project-small-other_project2"
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": "#FFFFFF",
        }
      }
    >
      <div
        className="row"
      >
        <div
          className="col-5"
        >
          <div
            className="project-title"
            style={
              Object {
                "color": "black",
              }
            }
          >
            <p>
              other_project2
            </p>
          </div>
        </div>
        <div
          className="col-7"
        >
          <img
            alt="other_project2"
            className="other-project-image"
            src="other_project2.jpg"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
